2013-11-02  Julien Bect  <julien.bect@supelec.fr>

	Remove example misc01, rename misc02 and misc03.

	* stk_example_misc01.m: deleted
	* stk_example_misc02.m: renamed to misc01
	* stk_example_misc03.m: renamed to misc02

	Add a new example.

	* examples/01_kriging_basics/stk_example_kb06.m: new script

	Raise current axis to the top layer in stk_plot_shadedci.

	* misc/plot/stk_plot_shadedci.m: modified

	Add the Gaussian correlation to example 'misc02'.

	* examples/03_miscellaneous/stk_example_misc02.m: modified

2013-11-01  Julien Bect  <julien.bect@supelec.fr>

	Add Gaussian isotropic and anisotropic covariance functions.

	* covfcs/stk_gausscov_iso.m: new function
	* covfcs/stk_gausscov_aniso.m: new function
	* utils/stk_model.m: modified

	Add the Gaussian correlation function.

	* misc/specfun/stk_sf_gausscorr.m: new function

	Improve the precision of stk_sf_matern around 0 for high nu.

	* misc/specfun/stk_sf_matern.m: modified

2013-10-29  Julien Bect  <julien.bect@supelec.fr>

	Remove obsolete references to example01.m

	* core/stk_predict.m: modified
	* misc/plot/stk_plot1d.m: modified
	* examples/01_kriging_basics/stk_example_kb04.m: modified
	* examples/03_miscellaneous/stk_example_misc01.m: modified

2013-10-28  Julien Bect  <julien.bect@supelec.fr>

	Rewrite the description of examples 'doe02' and 'doe03'.

	* examples/02_design_of_experiments/stk_example_doe02.m: modified
	* examples/02_design_of_experiments/stk_example_doe03.m: modified

2013-10-26  Julien Bect  <julien.bect@supelec.fr>

	Rewrite example 'doe01'.

	* examples/02_design_of_experiments/stk_example_doe01.m: modified

	Add an optional 'box' argument to stk_sampling_halton_rr2.

	* sampling/stk_sampling_halton_rr2.m: modified

	Rewrite the description of examples 'kb04' and 'kb05'.

	* examples/01_kriging_basics/stk_example_kb04.m: modified
	* examples/01_kriging_basics/stk_example_kb05.m: modified

2013-10-23  Julien Bect  <julien.bect@supelec.fr>
